Testing deploy railway

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,6 @@
       "@/assets/*": ["./public/assets/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "src/components/Textarea"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*"],
   "exclude": ["node_modules"]
 }
